@startuml
package domain <<Rectangle>> {
    class FileReference
    class RecentFileRepository
}

interface RecentFileRepository {
    + suspend getAll(): List<FileReference>
    + suspend getLastRecentlyUsedFiles(period: Int): List<FileReference>
    + suspend update(files: FileReference[])
    + suspend insert(newFiles: FileReference[])
    + suspend delete(file: FileReference)
}

class FileReference {
    + id: String?
    + fileName: String
    + fileExtension: String?
    + filePath: Path
    + lastAccess: OffsetDateTime
}

package "plugins-android-database" <<Rectangle>> {
    class RoomRecentFileRepository
}

class RoomRecentFileRepository implements RecentFileRepository

package "Android Room Database" <<Database>> {
}

RoomRecentFileRepository --> "Android Room Database"

"Android Room Database" "1" *-- "viele" FileReference

@enduml